[gd_scene load_steps=11 format=3 uid="uid://cygmp3elu4kij"]

[ext_resource type="Script" path="res://Scenes/game.gd" id="1_67put"]
[ext_resource type="Texture2D" uid="uid://cf83i6ab4h457" path="res://Sprites/button.PNG" id="2_cvfho"]
[ext_resource type="FontFile" uid="uid://b2cswqm32sj5f" path="res://Ressources/Lex.ttf" id="2_q8ujg"]
[ext_resource type="Script" path="res://Sprites/Switch/Switch.gd" id="3_gwxeo"]
[ext_resource type="Texture2D" uid="uid://bvp45mugj0pvi" path="res://Sprites/Switch/off.PNG" id="3_tksxr"]
[ext_resource type="Texture2D" uid="uid://bg2v8g0rhtklx" path="res://Sprites/Maps/map_deco.PNG" id="4_tswrj"]
[ext_resource type="Texture2D" uid="uid://cpiutjtj20tfu" path="res://Sprites/Lamps/off.PNG" id="5_4jnr2"]
[ext_resource type="Texture2D" uid="uid://bwvpxew6qd2m5" path="res://Sprites/Maps/map_border.PNG" id="5_nvd4p"]
[ext_resource type="Script" path="res://Sprites/Lamps/Lamp.gd" id="6_ampmk"]
[ext_resource type="AudioStream" uid="uid://yfmc76ec18kr" path="res://Sounds/zap.mp3" id="8_q7x5g"]

[node name="Game" type="Node2D"]
script = ExtResource("1_67put")

[node name="buttonBackTexture" type="Sprite2D" parent="."]
position = Vector2(189, 136)
scale = Vector2(0.218072, 0.218072)
texture = ExtResource("2_cvfho")

[node name="BackButon" type="CenterContainer" parent="buttonBackTexture"]
offset_left = -450.157
offset_top = -163.559
offset_right = -220.157
offset_bottom = -73.5588
scale = Vector2(3.73412, 3.73412)

[node name="Label" type="Label" parent="buttonBackTexture/BackButon"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_q8ujg")
theme_override_font_sizes/font_size = 70
text = "Back"

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_left = 3.0
offset_top = 77.0
offset_right = 1923.0
offset_bottom = 261.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="NumberLabel" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_q8ujg")
theme_override_font_sizes/font_size = 90
text = "OwO
"

[node name="NumberPreview" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.564962, 0.564962, 0.564962, 1)
theme_override_fonts/font = ExtResource("2_q8ujg")
theme_override_font_sizes/font_size = 60
text = "OwO
"

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Map_deco" type="Sprite2D" parent="MarginContainer"]
position = Vector2(960, 540)
texture = ExtResource("4_tswrj")

[node name="Map_border" type="Sprite2D" parent="MarginContainer"]
position = Vector2(960, 540)
texture = ExtResource("5_nvd4p")

[node name="Switch 1" type="Sprite2D" parent="MarginContainer"]
position = Vector2(252, 933)
scale = Vector2(0.07, 0.07)
texture = ExtResource("3_tksxr")
script = ExtResource("3_gwxeo")
metadata/id = 1

[node name="Switch 2" type="Sprite2D" parent="MarginContainer"]
position = Vector2(371, 933)
scale = Vector2(0.07, 0.07)
texture = ExtResource("3_tksxr")
script = ExtResource("3_gwxeo")
metadata/id = 2

[node name="Switch 3" type="Sprite2D" parent="MarginContainer"]
position = Vector2(483, 933.26)
scale = Vector2(0.07, 0.07)
texture = ExtResource("3_tksxr")
script = ExtResource("3_gwxeo")
metadata/id = 3

[node name="Switch 4" type="Sprite2D" parent="MarginContainer"]
position = Vector2(600, 933.26)
scale = Vector2(0.07, 0.07)
texture = ExtResource("3_tksxr")
script = ExtResource("3_gwxeo")
metadata/id = 4

[node name="Switch 5" type="Sprite2D" parent="MarginContainer"]
position = Vector2(1320, 933.26)
scale = Vector2(0.07, 0.07)
texture = ExtResource("3_tksxr")
script = ExtResource("3_gwxeo")
metadata/id = 5

[node name="Switch 6" type="Sprite2D" parent="MarginContainer"]
position = Vector2(1438, 933.26)
scale = Vector2(0.07, 0.07)
texture = ExtResource("3_tksxr")
script = ExtResource("3_gwxeo")
metadata/id = 6

[node name="Switch 7" type="Sprite2D" parent="MarginContainer"]
position = Vector2(1549, 933.26)
scale = Vector2(0.07, 0.07)
texture = ExtResource("3_tksxr")
script = ExtResource("3_gwxeo")
metadata/id = 7

[node name="Switch 8" type="Sprite2D" parent="MarginContainer"]
position = Vector2(1668, 933.26)
scale = Vector2(0.07, 0.07)
texture = ExtResource("3_tksxr")
script = ExtResource("3_gwxeo")
metadata/id = 8

[node name="Lamp 1" type="Sprite2D" parent="MarginContainer"]
position = Vector2(207, 425)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_4jnr2")
script = ExtResource("6_ampmk")
metadata/id = 1

[node name="Lamp 2" type="Sprite2D" parent="MarginContainer"]
position = Vector2(442, 425)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_4jnr2")
script = ExtResource("6_ampmk")
metadata/id = 2

[node name="Lamp 3" type="Sprite2D" parent="MarginContainer"]
position = Vector2(673, 425)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_4jnr2")
script = ExtResource("6_ampmk")
metadata/id = 3

[node name="Lamp 4" type="Sprite2D" parent="MarginContainer"]
position = Vector2(926, 425)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_4jnr2")
script = ExtResource("6_ampmk")
metadata/id = 4

[node name="Lamp 5" type="Sprite2D" parent="MarginContainer"]
position = Vector2(1180, 425)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_4jnr2")
script = ExtResource("6_ampmk")
metadata/id = 5

[node name="Lamp 6" type="Sprite2D" parent="MarginContainer"]
position = Vector2(1405, 425)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_4jnr2")
script = ExtResource("6_ampmk")
metadata/id = 6

[node name="Lamp 7" type="Sprite2D" parent="MarginContainer"]
position = Vector2(1629, 425)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_4jnr2")
script = ExtResource("6_ampmk")
metadata/id = 7

[node name="CenterContainer2" type="CenterContainer" parent="."]
offset_left = 1279.0
offset_top = 189.0
offset_right = 1919.0
offset_bottom = 289.0

[node name="ScoreLabel" type="Label" parent="CenterContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_q8ujg")
theme_override_font_sizes/font_size = 60
text = "OwO
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_q7x5g")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 78.0
offset_top = 377.0
offset_right = 1778.0
offset_bottom = 477.0

[node name="LeftArrow" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_q8ujg")
theme_override_font_sizes/font_size = 80
text = ">"

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightArrow" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_q8ujg")
theme_override_font_sizes/font_size = 80
text = "<"

[node name="CenterContainer3" type="CenterContainer" parent="."]
offset_left = 1404.0
offset_top = 81.0
offset_right = 1604.0
offset_bottom = 121.0
scale = Vector2(2.56, 2.68)

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="TimerLabel" type="Label" parent="CenterContainer3/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_q8ujg")
text = "uwu"

[node name="MapLabel" type="Label" parent="CenterContainer3/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.564706, 0.564706, 0.564706, 1)
theme_override_fonts/font = ExtResource("2_q8ujg")
text = "[ ]"
